# ipa_seminar

ipa_seminar_driver/: README.md  startkr16.txt
ipa_seminar_driver/driver_tutorial/ipa325_common/: .hgsub  .hgsubstate
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/: dirstate  hgrc  undo.desc
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/cache/: branchheads  tags
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/: ~2ehgsub.i  ~2ehgsubstate.i
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/ipa325__common/: _c_make_lists.txt.i  package.xml.i
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/ipa325__common__msgs/: _c_make_lists.txt.i  package.xml.i
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/ipa325__hal__connector/: _c_make_lists.txt.i  package.xml.i
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/ipa325__robot__descriptions/: _c_make_lists.txt.i  package.xml.i
ipa_seminar_driver/driver_tutorial/ipa325_common/.hg/store/data/ipa325__ur5__moveit__config/: _c_make_lists.txt.i  package.xml.i  ~2esetup__assistant.i
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/: .hgignore
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/.hg/: dirstate  hgrc  undo.desc
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/.hg/cache/: branchheads
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/ipa325_msgs/: CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/ipa325_msgs/action/: ExecuteSkill.action  FollowPoseTrajectory.action  Job.action  LinMove.action  Output.action  RobotMovement.action
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/ipa325_msgs/msg/: PoseTrajectory.msg  PoseTrajectoryPoint.msg  WayPoint.msg
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosMessages/ipa325_msgs/srv/: GetPartPose.srv  GetPartPoseEuler.srv  OperationTrigger.srv
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/: .hgignore
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/.hg/: dirstate  hgrc  undo.desc
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/.hg/cache/: branchheads
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/ipa325_moveit_config/ipa325_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/ipa325_robot_descriptions/: package.xml
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_RosRobotModels/ipa325_robot_descriptions/launch/: lbr_stihl.launch  lbr_stihl_publisher.launch  ur5_stihl.launch
ipa_seminar_driver/driver_tutorial/ipa325_common/ipa325_common/: CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/ipa325_kr16/: .hgignore
ipa_seminar_driver/driver_tutorial/ipa325_kr16/.hg/: dirstate  hgrc  undo.desc
ipa_seminar_driver/driver_tutorial/ipa325_kr16/.hg/cache/: branchheads  tags
ipa_seminar_driver/driver_tutorial/ipa325_kr16/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
ipa_seminar_driver/driver_tutorial/ipa325_kr16/.hg/store/data/: ~2ehgignore.i
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/: CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/common/files/: EKIServerFrame.xml  EKI_Dummy.xml
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/common/files/KRL/: main_loop.src  main_loop_rsi.src
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/common/include/KukaEthernetClient/: KukaAxis.h  KukaEthernetClient.h  KukaFrame.h  StringEthernetClient.h  XmlDefines.h  XmlStringHandler.h
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/common/src/KukaEthernetClient/: KukaAxis.cpp  KukaEthernetClient.cpp  KukaFrame.cpp  StringEthernetClient.cpp  XmlStringHandler.cpp
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/launch/: EkiServer.launch  EkiServer_dummy.launch  config.yaml  config_dummy.yaml  rsi_rviz_2.launch
ipa_seminar_driver/driver_tutorial/ipa325_kr16/ipa325_EkiDriver/src/: EkiDriver.cpp  EkiTestClient.cpp
ipa_seminar_driver/driver_tutorial/kr16_deployment/: .project  package.xml  system.launch
ipa_seminar_driver/driver_tutorial/kr16_deployment/model/: kr16_deployment.ros_system  kr16_deployment.ros_system_diagram
ipa_seminar_driver/driver_tutorial/kr16_driver/: .cproject  .project  CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/kr16_driver/cfg/: kr16_node.cfg
ipa_seminar_driver/driver_tutorial/kr16_driver/common/src/: kr16_node_common.cpp
ipa_seminar_driver/driver_tutorial/kr16_driver/model/: kr16_driver.ros_package
ipa_seminar_driver/driver_tutorial/kr16_driver/ros/src/: kr16_node_ros.cpp
ipa_seminar_driver/driver_tutorial/kr16_test_client/: .cproject  .project  CMakeLists.txt  package.xml
ipa_seminar_driver/driver_tutorial/kr16_test_client/cfg/: kr16_test_client.cfg
ipa_seminar_driver/driver_tutorial/kr16_test_client/common/src/: kr16_test_client_common.cpp
ipa_seminar_driver/driver_tutorial/kr16_test_client/model/: kr16_test_client.ros_package
ipa_seminar_driver/driver_tutorial/kr16_test_client/ros/src/: kr16_test_client_ros.cpp
(+519 files in other folders)
